--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -139,8 +139,8 @@
   </div> -->
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">Copyright &copy; <a href="#">PN (AUTO) COLLEGE</a>. All Rights Reserved</p>
-      <p class="rf">Design by <a target="_blank" href="http://www.dreamtemplate.com/">Shubhashisa Jena</a></p>
+      <p class="lf">Copyright &copy; <a href="#">VSSUT</a>. All Rights Reserved</p>
+      <p class="rf">Design by <a target="_blank" href="http://www.dreamtemplate.com/">SUBHAM HALWAI</a></p>
       <div style="clear:both;"></div>
     </div>
   </div>
