--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -167,7 +167,7 @@
   <div class="footer">
     <div class="footer_resize">
       <p class="lf">Copyright &copy; <a href="#">Domain Name</a>. All Rights Reserved</p>
-      <p class="rf">Design by <a target="_blank" href="http://www.dreamtemplate.com/">DreamTemplate</a></p>
+      <p class="rf">Design by SUBHAM HALWAI</p>
       <div style="clear:both;"></div>
     </div>
   </div>
